--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(test_task main.cpp
         buildingData/Place.h
         buildingData/Comment.h
-        buildingData/Building.h)
+        buildingData/Building.h
+        buildingData/Building.cpp
+        buildingData/Comment.cpp
+        buildingData/Place.cpp)
