начало выполнения второго задания

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,4 @@ project(test_task)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(test_task main.cpp
-        buildingData/Place.h
-        buildingData/Comment.h
-        buildingData/Building.h)
+add_executable(test_task main.cpp)
