--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(test_task)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(test_task main.cpp)
+add_executable(test_task main.cpp
+        vehicle/Vehicle.h
+        vehicle/Car.cpp
+        vehicle/Car.h
+        vehicle/Teleport.cpp
+        vehicle/Teleport.h)
